# SimpleChat

./: .gitignore  CMakeLists.txt  README.md  install_dependencies.sh  launch_ring.sh  run_tests.sh  test_messaging.sh
src/: chatwindow.cpp  chatwindow.h  main.cpp  message.cpp  message.h  networkmanager.cpp  networkmanager.h  simplechat.cpp  simplechat.h
test_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
test_build/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
test_build/SimpleChat_autogen/: deps  mocs_compilation.cpp
test_build/SimpleChat_autogen/UVLADIE3JM/: moc_chatwindow.cpp.d  moc_networkmanager.cpp.d  moc_simplechat.cpp.d
test_build/Testing/Temporary/: CTestCostData.txt
test_build/tests/: CTestTestfile.cmake  Makefile  SimpleChat_Tests  cmake_install.cmake
test_build/tests/SimpleChat_Tests_autogen/: deps
tests/: CMakeLists.txt  test_simple.cpp
